<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txDetalleInmueble"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"/>


    <ImageView
        android:id="@+id/ivImagenProp"
        android:layout_width="398dp"
        android:layout_height="101dp"
        android:layout_marginTop="20sp"
        android:src="@drawable/casaladrillo1" />


    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txDomInmueble"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etDomProp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:ems="10"
        android:hint="@string/etDirInmueble"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txAmbInmueble"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/etAmbProp"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etAmbInmueble"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txTipoInmueble"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10sp"/>

    <EditText
        android:id="@+id/etTipoProp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        android:hint="@string/etTipoInmueble" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10sp"
        android:text="@string/txUsoInmueble" />

    <EditText
        android:id="@+id/etUsoProp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:hint="@string/etUsoInmueble" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="10sp"
        android:text="@string/txPrecioInmueble" />

    <EditText
        android:id="@+id/etPrecioProp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:hint="@string/etPrecioInmueble" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/txDispInmueble"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbDispProp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="-29dp"
        android:text="" />

    <Button
        android:id="@+id/btEditDispProp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btEditInmueble" />

</LinearLayout>